--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </span>
         <nav>
             <ul id="menu">
-                <li href="/#" id="current">Home</li>
+                <a href="/#" id="current"><li>Home</li></a>
                 <li><a id="brigadeiro" href="/#brigadeiro">Brigadeiros</a></li>
                 <a href="/#cupcake"><li>Cupcakes</li></a>
                 <a href="/#doces"><li>Doces</li></a>
