--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </span>
         <nav>
             <ul id="menu">
-                <a href="/#" id="current"><li>Home</li></a>
-                <li><a id="brigadeiro" href="/#brigadeiro">Brigadeiros</a></li>
-                <a href="/#cupcake"><li>Cupcakes</li></a>
-                <a href="/#doces"><li>Doces</li></a>
+                <li id="home" value="home">Home</li></a>
+                <li id="brigadeiro" value="brigadeiro">Brigadeiros</li>
+                <li id="cupcake" value="cupcake">Cupcakes</li></a>
+                <li id="doces" value="doces">Doces</li></a>
             </ul>
         </nav>
     </header>
